// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._12f9eb9z,html._12f9eb9z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="_79z0d70 _1mxx26x18 _1mxx26x1b">
+        <div class="_1wjr3c00 _12f9eb97i _12f9eb96e _12f9eb99q _12f9eb98m _12f9eb95e _1mxx26x18 _1mxx26x1b _12f9eb932 _12f9eb935">
+          <span class="_1wjr3c00 _12f9eb94y _1mxx26x0 _1mxx26x1 _1mxx26x21 _16rsx744 _1mxx26xd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1wjr3c00 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] ._1wjr3c00 {
  outline: none;
}
._1wjr3c01 {
  display: block;
}
._1wjr3c02 {
  line-height: 1;
}
._1wjr3c03 {
  list-style: none;
}
._1wjr3c04 {
  quotes: none;
}
._1wjr3c04:after,
._1wjr3c04:before {
  content: "";
}
._1wjr3c05 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1wjr3c06 {
  -webkit-appearance: none;
  appearance: none;
}
._1wjr3c07 {
  background-color: transparent;
}
._1wjr3c09 {
  color: inherit;
}
._1wjr3c0a:disabled {
  opacity: 1;
}
._1wjr3c0a::-ms-expand {
  display: none;
}
._1wjr3c0c[type="number"] {
  -moz-appearance: textfield;
}
._1wjr3c0c[type="number"]::-webkit-inner-spin-button,
._1wjr3c0c[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1wjr3c0c::-ms-clear {
  display: none;
}
._1wjr3c0c::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1wjr3c0f {
  color: inherit;
  text-decoration: none;
}
._12f9eb90 {
  overflow: hidden;
}
._12f9eb91 {
  overflow: scroll;
}
._12f9eb92 {
  overflow: visible;
}
._12f9eb93 {
  overflow: auto;
}
._12f9eb94 {
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
._12f9eb95 {
  outline: none;
}
._12f9eb96 {
  opacity: 0;
}
._12f9eb97 {
  z-index: 0;
}
._12f9eb98 {
  z-index: 1;
}
._12f9eb99 {
  z-index: 2;
}
._12f9eb9a {
  z-index: 90;
}
._12f9eb9b {
  z-index: 100;
}
._12f9eb9c {
  z-index: 200;
}
._12f9eb9d {
  z-index: 290;
}
._12f9eb9e {
  z-index: 300;
}
._12f9eb9f {
  z-index: 400;
}
._12f9eb9g {
  cursor: default;
}
._12f9eb9h {
  cursor: pointer;
}
._12f9eb9i {
  pointer-events: none;
}
._12f9eb9j {
  top: 0;
}
._12f9eb9k {
  bottom: 0;
}
._12f9eb9l {
  left: 0;
}
._12f9eb9m {
  right: 0;
}
._12f9eb9n {
  height: 100%;
}
._12f9eb9o {
  height: var(--zzmy9h9);
}
._12f9eb9p {
  width: 100%;
}
._12f9eb9q {
  width: var(--zzmy9h9);
}
._12f9eb9r {
  min-width: 0;
}
._12f9eb9s {
  max-width: var(--zzmy9h11);
}
._12f9eb9t {
  max-width: var(--zzmy9h12);
}
._12f9eb9u {
  max-width: var(--zzmy9h13);
}
._12f9eb9v {
  max-width: var(--zzmy9h14);
}
._12f9eb9w {
  transition: var(--zzmy9h5i);
}
._12f9eb9x {
  transition: var(--zzmy9h5j);
}
._12f9eb9y:active {
  transform: var(--zzmy9h5k);
}
html._12f9eb9z ._12f9eb911,
html:not(._12f9eb9z) ._12f9eb910 {
  background: var(--zzmy9h1t);
}
html._12f9eb9z ._12f9eb913,
html:not(._12f9eb9z) ._12f9eb912 {
  background: var(--zzmy9h1u);
}
html._12f9eb9z ._12f9eb915,
html:not(._12f9eb9z) ._12f9eb914 {
  background: var(--zzmy9h1v);
}
html._12f9eb9z ._12f9eb917,
html:not(._12f9eb9z) ._12f9eb916 {
  background: var(--zzmy9h1w);
}
html._12f9eb9z ._12f9eb919,
html:not(._12f9eb9z) ._12f9eb918 {
  background: var(--zzmy9h1x);
}
html._12f9eb9z ._12f9eb91b,
html:not(._12f9eb9z) ._12f9eb91a {
  background: var(--zzmy9h1y);
}
html._12f9eb9z ._12f9eb91d,
html:not(._12f9eb9z) ._12f9eb91c {
  background: var(--zzmy9h1z);
}
html._12f9eb9z ._12f9eb91f,
html:not(._12f9eb9z) ._12f9eb91e {
  background: var(--zzmy9h20);
}
html._12f9eb9z ._12f9eb91h,
html:not(._12f9eb9z) ._12f9eb91g {
  background: var(--zzmy9h21);
}
html._12f9eb9z ._12f9eb91j,
html:not(._12f9eb9z) ._12f9eb91i {
  background: var(--zzmy9h22);
}
html._12f9eb9z ._12f9eb91l,
html:not(._12f9eb9z) ._12f9eb91k {
  background: var(--zzmy9h23);
}
html._12f9eb9z ._12f9eb91n,
html:not(._12f9eb9z) ._12f9eb91m {
  background: var(--zzmy9h24);
}
html._12f9eb9z ._12f9eb91p,
html:not(._12f9eb9z) ._12f9eb91o {
  background: var(--zzmy9h25);
}
html._12f9eb9z ._12f9eb91r,
html:not(._12f9eb9z) ._12f9eb91q {
  background: var(--zzmy9h26);
}
html._12f9eb9z ._12f9eb91t,
html:not(._12f9eb9z) ._12f9eb91s {
  background: var(--zzmy9h27);
}
html._12f9eb9z ._12f9eb91v,
html:not(._12f9eb9z) ._12f9eb91u {
  background: var(--zzmy9h28);
}
html._12f9eb9z ._12f9eb91x,
html:not(._12f9eb9z) ._12f9eb91w {
  background: var(--zzmy9h29);
}
html._12f9eb9z ._12f9eb91z,
html:not(._12f9eb9z) ._12f9eb91y {
  background: var(--zzmy9h2a);
}
html._12f9eb9z ._12f9eb921,
html:not(._12f9eb9z) ._12f9eb920 {
  background: var(--zzmy9h2b);
}
html._12f9eb9z ._12f9eb923,
html:not(._12f9eb9z) ._12f9eb922 {
  background: var(--zzmy9h2c);
}
html._12f9eb9z ._12f9eb925,
html:not(._12f9eb9z) ._12f9eb924 {
  background: var(--zzmy9h2d);
}
html._12f9eb9z ._12f9eb927,
html:not(._12f9eb9z) ._12f9eb926 {
  background: var(--zzmy9h2e);
}
html._12f9eb9z ._12f9eb929,
html:not(._12f9eb9z) ._12f9eb928 {
  background: var(--zzmy9h2f);
}
html._12f9eb9z ._12f9eb92b,
html:not(._12f9eb9z) ._12f9eb92a {
  background: var(--zzmy9h2g);
}
html._12f9eb9z ._12f9eb92d,
html:not(._12f9eb9z) ._12f9eb92c {
  background: var(--zzmy9h2h);
}
html._12f9eb9z ._12f9eb92f,
html:not(._12f9eb9z) ._12f9eb92e {
  background: var(--zzmy9h2i);
}
html._12f9eb9z ._12f9eb92h,
html:not(._12f9eb9z) ._12f9eb92g {
  background: var(--zzmy9h2j);
}
html._12f9eb9z ._12f9eb92j,
html:not(._12f9eb9z) ._12f9eb92i {
  background: var(--zzmy9h2k);
}
html._12f9eb9z ._12f9eb92l,
html:not(._12f9eb9z) ._12f9eb92k {
  background: var(--zzmy9h2l);
}
html._12f9eb9z ._12f9eb92n,
html:not(._12f9eb9z) ._12f9eb92m {
  background: var(--zzmy9h2m);
}
html._12f9eb9z ._12f9eb92p,
html:not(._12f9eb9z) ._12f9eb92o {
  background: var(--zzmy9h2n);
}
html._12f9eb9z ._12f9eb92r,
html:not(._12f9eb9z) ._12f9eb92q {
  background: var(--zzmy9h2o);
}
html._12f9eb9z ._12f9eb92t,
html:not(._12f9eb9z) ._12f9eb92s {
  background: var(--zzmy9h2p);
}
html._12f9eb9z ._12f9eb92v,
html:not(._12f9eb9z) ._12f9eb92u {
  background: var(--zzmy9h2q);
}
html._12f9eb9z ._12f9eb92x,
html:not(._12f9eb9z) ._12f9eb92w {
  background: var(--zzmy9h2r);
}
html._12f9eb9z ._12f9eb92z,
html:not(._12f9eb9z) ._12f9eb92y {
  background: var(--zzmy9h2s);
}
html._12f9eb9z ._12f9eb931,
html:not(._12f9eb9z) ._12f9eb930 {
  background: var(--zzmy9h2t);
}
html._12f9eb9z ._12f9eb933,
html:not(._12f9eb9z) ._12f9eb932 {
  background: var(--zzmy9h2u);
}
html._12f9eb9z ._12f9eb935,
html:not(._12f9eb9z) ._12f9eb934 {
  background: var(--zzmy9h2v);
}
html._12f9eb9z ._12f9eb937,
html:not(._12f9eb9z) ._12f9eb936 {
  box-shadow: var(--zzmy9h5l);
}
html._12f9eb9z ._12f9eb939,
html:not(._12f9eb9z) ._12f9eb938 {
  box-shadow: var(--zzmy9h5m);
}
html._12f9eb9z ._12f9eb93b,
html:not(._12f9eb9z) ._12f9eb93a {
  box-shadow: var(--zzmy9h5n);
}
html._12f9eb9z ._12f9eb93d,
html:not(._12f9eb9z) ._12f9eb93c {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hf);
}
html._12f9eb9z ._12f9eb93f,
html:not(._12f9eb9z) ._12f9eb93e {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hg);
}
html._12f9eb9z ._12f9eb93h,
html:not(._12f9eb9z) ._12f9eb93g {
  box-shadow: inset 0 0 0 var(--zzmy9hz) var(--zzmy9hf);
}
html._12f9eb9z ._12f9eb93j,
html:not(._12f9eb9z) ._12f9eb93i {
  box-shadow: inset 0 0 0 var(--zzmy9hz) var(--zzmy9hg);
}
html._12f9eb9z ._12f9eb93l,
html:not(._12f9eb9z) ._12f9eb93k {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hh);
}
html._12f9eb9z ._12f9eb93n,
html:not(._12f9eb9z) ._12f9eb93m {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hi);
}
html._12f9eb9z ._12f9eb93p,
html:not(._12f9eb9z) ._12f9eb93o {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hj);
}
html._12f9eb9z ._12f9eb93r,
html:not(._12f9eb9z) ._12f9eb93q {
  box-shadow: inset 0 0 0 var(--zzmy9hz) var(--zzmy9hj);
}
html._12f9eb9z ._12f9eb93t,
html:not(._12f9eb9z) ._12f9eb93s {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hk);
}
html._12f9eb9z ._12f9eb93v,
html:not(._12f9eb9z) ._12f9eb93u {
  box-shadow: inset 0 0 0 var(--zzmy9hz) var(--zzmy9hk);
}
html._12f9eb9z ._12f9eb93x,
html:not(._12f9eb9z) ._12f9eb93w {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hl);
}
html._12f9eb9z ._12f9eb93z,
html:not(._12f9eb9z) ._12f9eb93y {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hn);
}
html._12f9eb9z ._12f9eb941,
html:not(._12f9eb9z) ._12f9eb940 {
  box-shadow: inset 0 0 0 var(--zzmy9hz) var(--zzmy9hn);
}
html._12f9eb9z ._12f9eb943,
html:not(._12f9eb9z) ._12f9eb942 {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9ho);
}
html._12f9eb9z ._12f9eb945,
html:not(._12f9eb9z) ._12f9eb944 {
  box-shadow: inset 0 0 0 var(--zzmy9hz) var(--zzmy9ho);
}
html._12f9eb9z ._12f9eb947,
html:not(._12f9eb9z) ._12f9eb946 {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hp);
}
html._12f9eb9z ._12f9eb949,
html:not(._12f9eb9z) ._12f9eb948 {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hq);
}
html._12f9eb9z ._12f9eb94b,
html:not(._12f9eb9z) ._12f9eb94a {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hr);
}
html._12f9eb9z ._12f9eb94d,
html:not(._12f9eb9z) ._12f9eb94c {
  box-shadow: inset 0 0 0 var(--zzmy9hz) var(--zzmy9hr);
}
html._12f9eb9z ._12f9eb94f,
html:not(._12f9eb9z) ._12f9eb94e {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hs);
}
html._12f9eb9z ._12f9eb94h,
html:not(._12f9eb9z) ._12f9eb94g {
  box-shadow: inset 0 0 0 var(--zzmy9hz) var(--zzmy9hs);
}
html._12f9eb9z ._12f9eb94j,
html:not(._12f9eb9z) ._12f9eb94i {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9ht);
}
html._12f9eb9z ._12f9eb94l,
html:not(._12f9eb9z) ._12f9eb94k {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hu);
}
html._12f9eb9z ._12f9eb94n,
html:not(._12f9eb9z) ._12f9eb94m {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hv);
}
html._12f9eb9z ._12f9eb94p,
html:not(._12f9eb9z) ._12f9eb94o {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hw);
}
html._12f9eb9z ._12f9eb94r,
html:not(._12f9eb9z) ._12f9eb94q {
  box-shadow: inset 0 0 0 var(--zzmy9hy) var(--zzmy9hx);
}
html._12f9eb9z ._12f9eb94t,
html:not(._12f9eb9z) ._12f9eb94s {
  box-shadow: 0 0 0 var(--zzmy9h10) var(--zzmy9hm);
}
._12f9eb94u {
  display: none;
}
._12f9eb94y {
  display: block;
}
._12f9eb952 {
  display: inline;
}
._12f9eb956 {
  display: inline-block;
}
._12f9eb95a {
  display: flex;
}
._12f9eb95e {
  position: relative;
}
._12f9eb95i {
  position: absolute;
}
._12f9eb95m {
  position: fixed;
}
._12f9eb95q {
  border-radius: 0;
}
._12f9eb95u {
  border-radius: 9999px;
}
._12f9eb95y {
  border-radius: var(--zzmy9hb);
}
._12f9eb962 {
  border-radius: var(--zzmy9hc);
}
._12f9eb966 {
  border-radius: var(--zzmy9hd);
}
._12f9eb96a {
  border-radius: var(--zzmy9he);
}
._12f9eb96e {
  padding-top: var(--zzmy9h0);
}
._12f9eb96i {
  padding-top: var(--zzmy9h1);
}
._12f9eb96m {
  padding-top: var(--zzmy9h2);
}
._12f9eb96q {
  padding-top: var(--zzmy9h3);
}
._12f9eb96u {
  padding-top: var(--zzmy9h4);
}
._12f9eb96y {
  padding-top: var(--zzmy9h5);
}
._12f9eb972 {
  padding-top: var(--zzmy9h6);
}
._12f9eb976 {
  padding-top: var(--zzmy9h7);
}
._12f9eb97a {
  padding-top: var(--zzmy9h8);
}
._12f9eb97e {
  padding-top: 0;
}
._12f9eb97i {
  padding-bottom: var(--zzmy9h0);
}
._12f9eb97m {
  padding-bottom: var(--zzmy9h1);
}
._12f9eb97q {
  padding-bottom: var(--zzmy9h2);
}
._12f9eb97u {
  padding-bottom: var(--zzmy9h3);
}
._12f9eb97y {
  padding-bottom: var(--zzmy9h4);
}
._12f9eb982 {
  padding-bottom: var(--zzmy9h5);
}
._12f9eb986 {
  padding-bottom: var(--zzmy9h6);
}
._12f9eb98a {
  padding-bottom: var(--zzmy9h7);
}
._12f9eb98e {
  padding-bottom: var(--zzmy9h8);
}
._12f9eb98i {
  padding-bottom: 0;
}
._12f9eb98m {
  padding-right: var(--zzmy9h0);
}
._12f9eb98q {
  padding-right: var(--zzmy9h1);
}
._12f9eb98u {
  padding-right: var(--zzmy9h2);
}
._12f9eb98y {
  padding-right: var(--zzmy9h3);
}
._12f9eb992 {
  padding-right: var(--zzmy9h4);
}
._12f9eb996 {
  padding-right: var(--zzmy9h5);
}
._12f9eb99a {
  padding-right: var(--zzmy9h6);
}
._12f9eb99e {
  padding-right: var(--zzmy9h7);
}
._12f9eb99i {
  padding-right: var(--zzmy9h8);
}
._12f9eb99m {
  padding-right: 0;
}
._12f9eb99q {
  padding-left: var(--zzmy9h0);
}
._12f9eb99u {
  padding-left: var(--zzmy9h1);
}
._12f9eb99y {
  padding-left: var(--zzmy9h2);
}
._12f9eb9a2 {
  padding-left: var(--zzmy9h3);
}
._12f9eb9a6 {
  padding-left: var(--zzmy9h4);
}
._12f9eb9aa {
  padding-left: var(--zzmy9h5);
}
._12f9eb9ae {
  padding-left: var(--zzmy9h6);
}
._12f9eb9ai {
  padding-left: var(--zzmy9h7);
}
._12f9eb9am {
  padding-left: var(--zzmy9h8);
}
._12f9eb9aq {
  padding-left: 0;
}
._12f9eb9au {
  margin-top: var(--zzmy9h0);
}
._12f9eb9ay {
  margin-top: var(--zzmy9h1);
}
._12f9eb9b2 {
  margin-top: var(--zzmy9h2);
}
._12f9eb9b6 {
  margin-top: var(--zzmy9h3);
}
._12f9eb9ba {
  margin-top: var(--zzmy9h4);
}
._12f9eb9be {
  margin-top: var(--zzmy9h5);
}
._12f9eb9bi {
  margin-top: var(--zzmy9h6);
}
._12f9eb9bm {
  margin-top: var(--zzmy9h7);
}
._12f9eb9bq {
  margin-top: var(--zzmy9h8);
}
._12f9eb9bu {
  margin-top: 0;
}
._12f9eb9by {
  margin-bottom: var(--zzmy9h0);
}
._12f9eb9c2 {
  margin-bottom: var(--zzmy9h1);
}
._12f9eb9c6 {
  margin-bottom: var(--zzmy9h2);
}
._12f9eb9ca {
  margin-bottom: var(--zzmy9h3);
}
._12f9eb9ce {
  margin-bottom: var(--zzmy9h4);
}
._12f9eb9ci {
  margin-bottom: var(--zzmy9h5);
}
._12f9eb9cm {
  margin-bottom: var(--zzmy9h6);
}
._12f9eb9cq {
  margin-bottom: var(--zzmy9h7);
}
._12f9eb9cu {
  margin-bottom: var(--zzmy9h8);
}
._12f9eb9cy {
  margin-bottom: 0;
}
._12f9eb9d2 {
  margin-right: var(--zzmy9h0);
}
._12f9eb9d6 {
  margin-right: var(--zzmy9h1);
}
._12f9eb9da {
  margin-right: var(--zzmy9h2);
}
._12f9eb9de {
  margin-right: var(--zzmy9h3);
}
._12f9eb9di {
  margin-right: var(--zzmy9h4);
}
._12f9eb9dm {
  margin-right: var(--zzmy9h5);
}
._12f9eb9dq {
  margin-right: var(--zzmy9h6);
}
._12f9eb9du {
  margin-right: var(--zzmy9h7);
}
._12f9eb9dy {
  margin-right: var(--zzmy9h8);
}
._12f9eb9e2 {
  margin-right: 0;
}
._12f9eb9e6 {
  margin-left: var(--zzmy9h0);
}
._12f9eb9ea {
  margin-left: var(--zzmy9h1);
}
._12f9eb9ee {
  margin-left: var(--zzmy9h2);
}
._12f9eb9ei {
  margin-left: var(--zzmy9h3);
}
._12f9eb9em {
  margin-left: var(--zzmy9h4);
}
._12f9eb9eq {
  margin-left: var(--zzmy9h5);
}
._12f9eb9eu {
  margin-left: var(--zzmy9h6);
}
._12f9eb9ey {
  margin-left: var(--zzmy9h7);
}
._12f9eb9f2 {
  margin-left: var(--zzmy9h8);
}
._12f9eb9f6 {
  margin-left: 0;
}
._12f9eb9fa {
  align-items: flex-start;
}
._12f9eb9fe {
  align-items: center;
}
._12f9eb9fi {
  align-items: flex-end;
}
._12f9eb9fm {
  justify-content: flex-start;
}
._12f9eb9fq {
  justify-content: center;
}
._12f9eb9fu {
  justify-content: flex-end;
}
._12f9eb9fy {
  justify-content: space-between;
}
._12f9eb9g2 {
  flex-direction: row;
}
._12f9eb9g6 {
  flex-direction: row-reverse;
}
._12f9eb9ga {
  flex-direction: column;
}
._12f9eb9ge {
  flex-direction: column-reverse;
}
._12f9eb9gi {
  flex-wrap: wrap;
}
._12f9eb9gm {
  flex-wrap: nowrap;
}
._12f9eb9gq {
  flex-shrink: 0;
}
._12f9eb9gu {
  flex-grow: 0;
}
._12f9eb9gy {
  flex-grow: 1;
}
._12f9eb9h2 {
  text-align: left;
}
._12f9eb9h6 {
  text-align: center;
}
._12f9eb9ha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._12f9eb94v {
    display: none;
  }
  ._12f9eb94z {
    display: block;
  }
  ._12f9eb953 {
    display: inline;
  }
  ._12f9eb957 {
    display: inline-block;
  }
  ._12f9eb95b {
    display: flex;
  }
  ._12f9eb95f {
    position: relative;
  }
  ._12f9eb95j {
    position: absolute;
  }
  ._12f9eb95n {
    position: fixed;
  }
  ._12f9eb95r {
    border-radius: 0;
  }
  ._12f9eb95v {
    border-radius: 9999px;
  }
  ._12f9eb95z {
    border-radius: var(--zzmy9hb);
  }
  ._12f9eb963 {
    border-radius: var(--zzmy9hc);
  }
  ._12f9eb967 {
    border-radius: var(--zzmy9hd);
  }
  ._12f9eb96b {
    border-radius: var(--zzmy9he);
  }
  ._12f9eb96f {
    padding-top: var(--zzmy9h0);
  }
  ._12f9eb96j {
    padding-top: var(--zzmy9h1);
  }
  ._12f9eb96n {
    padding-top: var(--zzmy9h2);
  }
  ._12f9eb96r {
    padding-top: var(--zzmy9h3);
  }
  ._12f9eb96v {
    padding-top: var(--zzmy9h4);
  }
  ._12f9eb96z {
    padding-top: var(--zzmy9h5);
  }
  ._12f9eb973 {
    padding-top: var(--zzmy9h6);
  }
  ._12f9eb977 {
    padding-top: var(--zzmy9h7);
  }
  ._12f9eb97b {
    padding-top: var(--zzmy9h8);
  }
  ._12f9eb97f {
    padding-top: 0;
  }
  ._12f9eb97j {
    padding-bottom: var(--zzmy9h0);
  }
  ._12f9eb97n {
    padding-bottom: var(--zzmy9h1);
  }
  ._12f9eb97r {
    padding-bottom: var(--zzmy9h2);
  }
  ._12f9eb97v {
    padding-bottom: var(--zzmy9h3);
  }
  ._12f9eb97z {
    padding-bottom: var(--zzmy9h4);
  }
  ._12f9eb983 {
    padding-bottom: var(--zzmy9h5);
  }
  ._12f9eb987 {
    padding-bottom: var(--zzmy9h6);
  }
  ._12f9eb98b {
    padding-bottom: var(--zzmy9h7);
  }
  ._12f9eb98f {
    padding-bottom: var(--zzmy9h8);
  }
  ._12f9eb98j {
    padding-bottom: 0;
  }
  ._12f9eb98n {
    padding-right: var(--zzmy9h0);
  }
  ._12f9eb98r {
    padding-right: var(--zzmy9h1);
  }
  ._12f9eb98v {
    padding-right: var(--zzmy9h2);
  }
  ._12f9eb98z {
    padding-right: var(--zzmy9h3);
  }
  ._12f9eb993 {
    padding-right: var(--zzmy9h4);
  }
  ._12f9eb997 {
    padding-right: var(--zzmy9h5);
  }
  ._12f9eb99b {
    padding-right: var(--zzmy9h6);
  }
  ._12f9eb99f {
    padding-right: var(--zzmy9h7);
  }
  ._12f9eb99j {
    padding-right: var(--zzmy9h8);
  }
  ._12f9eb99n {
    padding-right: 0;
  }
  ._12f9eb99r {
    padding-left: var(--zzmy9h0);
  }
  ._12f9eb99v {
    padding-left: var(--zzmy9h1);
  }
  ._12f9eb99z {
    padding-left: var(--zzmy9h2);
  }
  ._12f9eb9a3 {
    padding-left: var(--zzmy9h3);
  }
  ._12f9eb9a7 {
    padding-left: var(--zzmy9h4);
  }
  ._12f9eb9ab {
    padding-left: var(--zzmy9h5);
  }
  ._12f9eb9af {
    padding-left: var(--zzmy9h6);
  }
  ._12f9eb9aj {
    padding-left: var(--zzmy9h7);
  }
  ._12f9eb9an {
    padding-left: var(--zzmy9h8);
  }
  ._12f9eb9ar {
    padding-left: 0;
  }
  ._12f9eb9av {
    margin-top: var(--zzmy9h0);
  }
  ._12f9eb9az {
    margin-top: var(--zzmy9h1);
  }
  ._12f9eb9b3 {
    margin-top: var(--zzmy9h2);
  }
  ._12f9eb9b7 {
    margin-top: var(--zzmy9h3);
  }
  ._12f9eb9bb {
    margin-top: var(--zzmy9h4);
  }
  ._12f9eb9bf {
    margin-top: var(--zzmy9h5);
  }
  ._12f9eb9bj {
    margin-top: var(--zzmy9h6);
  }
  ._12f9eb9bn {
    margin-top: var(--zzmy9h7);
  }
  ._12f9eb9br {
    margin-top: var(--zzmy9h8);
  }
  ._12f9eb9bv {
    margin-top: 0;
  }
  ._12f9eb9bz {
    margin-bottom: var(--zzmy9h0);
  }
  ._12f9eb9c3 {
    margin-bottom: var(--zzmy9h1);
  }
  ._12f9eb9c7 {
    margin-bottom: var(--zzmy9h2);
  }
  ._12f9eb9cb {
    margin-bottom: var(--zzmy9h3);
  }
  ._12f9eb9cf {
    margin-bottom: var(--zzmy9h4);
  }
  ._12f9eb9cj {
    margin-bottom: var(--zzmy9h5);
  }
  ._12f9eb9cn {
    margin-bottom: var(--zzmy9h6);
  }
  ._12f9eb9cr {
    margin-bottom: var(--zzmy9h7);
  }
  ._12f9eb9cv {
    margin-bottom: var(--zzmy9h8);
  }
  ._12f9eb9cz {
    margin-bottom: 0;
  }
  ._12f9eb9d3 {
    margin-right: var(--zzmy9h0);
  }
  ._12f9eb9d7 {
    margin-right: var(--zzmy9h1);
  }
  ._12f9eb9db {
    margin-right: var(--zzmy9h2);
  }
  ._12f9eb9df {
    margin-right: var(--zzmy9h3);
  }
  ._12f9eb9dj {
    margin-right: var(--zzmy9h4);
  }
  ._12f9eb9dn {
    margin-right: var(--zzmy9h5);
  }
  ._12f9eb9dr {
    margin-right: var(--zzmy9h6);
  }
  ._12f9eb9dv {
    margin-right: var(--zzmy9h7);
  }
  ._12f9eb9dz {
    margin-right: var(--zzmy9h8);
  }
  ._12f9eb9e3 {
    margin-right: 0;
  }
  ._12f9eb9e7 {
    margin-left: var(--zzmy9h0);
  }
  ._12f9eb9eb {
    margin-left: var(--zzmy9h1);
  }
  ._12f9eb9ef {
    margin-left: var(--zzmy9h2);
  }
  ._12f9eb9ej {
    margin-left: var(--zzmy9h3);
  }
  ._12f9eb9en {
    margin-left: var(--zzmy9h4);
  }
  ._12f9eb9er {
    margin-left: var(--zzmy9h5);
  }
  ._12f9eb9ev {
    margin-left: var(--zzmy9h6);
  }
  ._12f9eb9ez {
    margin-left: var(--zzmy9h7);
  }
  ._12f9eb9f3 {
    margin-left: var(--zzmy9h8);
  }
  ._12f9eb9f7 {
    margin-left: 0;
  }
  ._12f9eb9fb {
    align-items: flex-start;
  }
  ._12f9eb9ff {
    align-items: center;
  }
  ._12f9eb9fj {
    align-items: flex-end;
  }
  ._12f9eb9fn {
    justify-content: flex-start;
  }
  ._12f9eb9fr {
    justify-content: center;
  }
  ._12f9eb9fv {
    justify-content: flex-end;
  }
  ._12f9eb9fz {
    justify-content: space-between;
  }
  ._12f9eb9g3 {
    flex-direction: row;
  }
  ._12f9eb9g7 {
    flex-direction: row-reverse;
  }
  ._12f9eb9gb {
    flex-direction: column;
  }
  ._12f9eb9gf {
    flex-direction: column-reverse;
  }
  ._12f9eb9gj {
    flex-wrap: wrap;
  }
  ._12f9eb9gn {
    flex-wrap: nowrap;
  }
  ._12f9eb9gr {
    flex-shrink: 0;
  }
  ._12f9eb9gv {
    flex-grow: 0;
  }
  ._12f9eb9gz {
    flex-grow: 1;
  }
  ._12f9eb9h3 {
    text-align: left;
  }
  ._12f9eb9h7 {
    text-align: center;
  }
  ._12f9eb9hb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._12f9eb94w {
    display: none;
  }
  ._12f9eb950 {
    display: block;
  }
  ._12f9eb954 {
    display: inline;
  }
  ._12f9eb958 {
    display: inline-block;
  }
  ._12f9eb95c {
    display: flex;
  }
  ._12f9eb95g {
    position: relative;
  }
  ._12f9eb95k {
    position: absolute;
  }
  ._12f9eb95o {
    position: fixed;
  }
  ._12f9eb95s {
    border-radius: 0;
  }
  ._12f9eb95w {
    border-radius: 9999px;
  }
  ._12f9eb960 {
    border-radius: var(--zzmy9hb);
  }
  ._12f9eb964 {
    border-radius: var(--zzmy9hc);
  }
  ._12f9eb968 {
    border-radius: var(--zzmy9hd);
  }
  ._12f9eb96c {
    border-radius: var(--zzmy9he);
  }
  ._12f9eb96g {
    padding-top: var(--zzmy9h0);
  }
  ._12f9eb96k {
    padding-top: var(--zzmy9h1);
  }
  ._12f9eb96o {
    padding-top: var(--zzmy9h2);
  }
  ._12f9eb96s {
    padding-top: var(--zzmy9h3);
  }
  ._12f9eb96w {
    padding-top: var(--zzmy9h4);
  }
  ._12f9eb970 {
    padding-top: var(--zzmy9h5);
  }
  ._12f9eb974 {
    padding-top: var(--zzmy9h6);
  }
  ._12f9eb978 {
    padding-top: var(--zzmy9h7);
  }
  ._12f9eb97c {
    padding-top: var(--zzmy9h8);
  }
  ._12f9eb97g {
    padding-top: 0;
  }
  ._12f9eb97k {
    padding-bottom: var(--zzmy9h0);
  }
  ._12f9eb97o {
    padding-bottom: var(--zzmy9h1);
  }
  ._12f9eb97s {
    padding-bottom: var(--zzmy9h2);
  }
  ._12f9eb97w {
    padding-bottom: var(--zzmy9h3);
  }
  ._12f9eb980 {
    padding-bottom: var(--zzmy9h4);
  }
  ._12f9eb984 {
    padding-bottom: var(--zzmy9h5);
  }
  ._12f9eb988 {
    padding-bottom: var(--zzmy9h6);
  }
  ._12f9eb98c {
    padding-bottom: var(--zzmy9h7);
  }
  ._12f9eb98g {
    padding-bottom: var(--zzmy9h8);
  }
  ._12f9eb98k {
    padding-bottom: 0;
  }
  ._12f9eb98o {
    padding-right: var(--zzmy9h0);
  }
  ._12f9eb98s {
    padding-right: var(--zzmy9h1);
  }
  ._12f9eb98w {
    padding-right: var(--zzmy9h2);
  }
  ._12f9eb990 {
    padding-right: var(--zzmy9h3);
  }
  ._12f9eb994 {
    padding-right: var(--zzmy9h4);
  }
  ._12f9eb998 {
    padding-right: var(--zzmy9h5);
  }
  ._12f9eb99c {
    padding-right: var(--zzmy9h6);
  }
  ._12f9eb99g {
    padding-right: var(--zzmy9h7);
  }
  ._12f9eb99k {
    padding-right: var(--zzmy9h8);
  }
  ._12f9eb99o {
    padding-right: 0;
  }
  ._12f9eb99s {
    padding-left: var(--zzmy9h0);
  }
  ._12f9eb99w {
    padding-left: var(--zzmy9h1);
  }
  ._12f9eb9a0 {
    padding-left: var(--zzmy9h2);
  }
  ._12f9eb9a4 {
    padding-left: var(--zzmy9h3);
  }
  ._12f9eb9a8 {
    padding-left: var(--zzmy9h4);
  }
  ._12f9eb9ac {
    padding-left: var(--zzmy9h5);
  }
  ._12f9eb9ag {
    padding-left: var(--zzmy9h6);
  }
  ._12f9eb9ak {
    padding-left: var(--zzmy9h7);
  }
  ._12f9eb9ao {
    padding-left: var(--zzmy9h8);
  }
  ._12f9eb9as {
    padding-left: 0;
  }
  ._12f9eb9aw {
    margin-top: var(--zzmy9h0);
  }
  ._12f9eb9b0 {
    margin-top: var(--zzmy9h1);
  }
  ._12f9eb9b4 {
    margin-top: var(--zzmy9h2);
  }
  ._12f9eb9b8 {
    margin-top: var(--zzmy9h3);
  }
  ._12f9eb9bc {
    margin-top: var(--zzmy9h4);
  }
  ._12f9eb9bg {
    margin-top: var(--zzmy9h5);
  }
  ._12f9eb9bk {
    margin-top: var(--zzmy9h6);
  }
  ._12f9eb9bo {
    margin-top: var(--zzmy9h7);
  }
  ._12f9eb9bs {
    margin-top: var(--zzmy9h8);
  }
  ._12f9eb9bw {
    margin-top: 0;
  }
  ._12f9eb9c0 {
    margin-bottom: var(--zzmy9h0);
  }
  ._12f9eb9c4 {
    margin-bottom: var(--zzmy9h1);
  }
  ._12f9eb9c8 {
    margin-bottom: var(--zzmy9h2);
  }
  ._12f9eb9cc {
    margin-bottom: var(--zzmy9h3);
  }
  ._12f9eb9cg {
    margin-bottom: var(--zzmy9h4);
  }
  ._12f9eb9ck {
    margin-bottom: var(--zzmy9h5);
  }
  ._12f9eb9co {
    margin-bottom: var(--zzmy9h6);
  }
  ._12f9eb9cs {
    margin-bottom: var(--zzmy9h7);
  }
  ._12f9eb9cw {
    margin-bottom: var(--zzmy9h8);
  }
  ._12f9eb9d0 {
    margin-bottom: 0;
  }
  ._12f9eb9d4 {
    margin-right: var(--zzmy9h0);
  }
  ._12f9eb9d8 {
    margin-right: var(--zzmy9h1);
  }
  ._12f9eb9dc {
    margin-right: var(--zzmy9h2);
  }
  ._12f9eb9dg {
    margin-right: var(--zzmy9h3);
  }
  ._12f9eb9dk {
    margin-right: var(--zzmy9h4);
  }
  ._12f9eb9do {
    margin-right: var(--zzmy9h5);
  }
  ._12f9eb9ds {
    margin-right: var(--zzmy9h6);
  }
  ._12f9eb9dw {
    margin-right: var(--zzmy9h7);
  }
  ._12f9eb9e0 {
    margin-right: var(--zzmy9h8);
  }
  ._12f9eb9e4 {
    margin-right: 0;
  }
  ._12f9eb9e8 {
    margin-left: var(--zzmy9h0);
  }
  ._12f9eb9ec {
    margin-left: var(--zzmy9h1);
  }
  ._12f9eb9eg {
    margin-left: var(--zzmy9h2);
  }
  ._12f9eb9ek {
    margin-left: var(--zzmy9h3);
  }
  ._12f9eb9eo {
    margin-left: var(--zzmy9h4);
  }
  ._12f9eb9es {
    margin-left: var(--zzmy9h5);
  }
  ._12f9eb9ew {
    margin-left: var(--zzmy9h6);
  }
  ._12f9eb9f0 {
    margin-left: var(--zzmy9h7);
  }
  ._12f9eb9f4 {
    margin-left: var(--zzmy9h8);
  }
  ._12f9eb9f8 {
    margin-left: 0;
  }
  ._12f9eb9fc {
    align-items: flex-start;
  }
  ._12f9eb9fg {
    align-items: center;
  }
  ._12f9eb9fk {
    align-items: flex-end;
  }
  ._12f9eb9fo {
    justify-content: flex-start;
  }
  ._12f9eb9fs {
    justify-content: center;
  }
  ._12f9eb9fw {
    justify-content: flex-end;
  }
  ._12f9eb9g0 {
    justify-content: space-between;
  }
  ._12f9eb9g4 {
    flex-direction: row;
  }
  ._12f9eb9g8 {
    flex-direction: row-reverse;
  }
  ._12f9eb9gc {
    flex-direction: column;
  }
  ._12f9eb9gg {
    flex-direction: column-reverse;
  }
  ._12f9eb9gk {
    flex-wrap: wrap;
  }
  ._12f9eb9go {
    flex-wrap: nowrap;
  }
  ._12f9eb9gs {
    flex-shrink: 0;
  }
  ._12f9eb9gw {
    flex-grow: 0;
  }
  ._12f9eb9h0 {
    flex-grow: 1;
  }
  ._12f9eb9h4 {
    text-align: left;
  }
  ._12f9eb9h8 {
    text-align: center;
  }
  ._12f9eb9hc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._12f9eb94x {
    display: none;
  }
  ._12f9eb951 {
    display: block;
  }
  ._12f9eb955 {
    display: inline;
  }
  ._12f9eb959 {
    display: inline-block;
  }
  ._12f9eb95d {
    display: flex;
  }
  ._12f9eb95h {
    position: relative;
  }
  ._12f9eb95l {
    position: absolute;
  }
  ._12f9eb95p {
    position: fixed;
  }
  ._12f9eb95t {
    border-radius: 0;
  }
  ._12f9eb95x {
    border-radius: 9999px;
  }
  ._12f9eb961 {
    border-radius: var(--zzmy9hb);
  }
  ._12f9eb965 {
    border-radius: var(--zzmy9hc);
  }
  ._12f9eb969 {
    border-radius: var(--zzmy9hd);
  }
  ._12f9eb96d {
    border-radius: var(--zzmy9he);
  }
  ._12f9eb96h {
    padding-top: var(--zzmy9h0);
  }
  ._12f9eb96l {
    padding-top: var(--zzmy9h1);
  }
  ._12f9eb96p {
    padding-top: var(--zzmy9h2);
  }
  ._12f9eb96t {
    padding-top: var(--zzmy9h3);
  }
  ._12f9eb96x {
    padding-top: var(--zzmy9h4);
  }
  ._12f9eb971 {
    padding-top: var(--zzmy9h5);
  }
  ._12f9eb975 {
    padding-top: var(--zzmy9h6);
  }
  ._12f9eb979 {
    padding-top: var(--zzmy9h7);
  }
  ._12f9eb97d {
    padding-top: var(--zzmy9h8);
  }
  ._12f9eb97h {
    padding-top: 0;
  }
  ._12f9eb97l {
    padding-bottom: var(--zzmy9h0);
  }
  ._12f9eb97p {
    padding-bottom: var(--zzmy9h1);
  }
  ._12f9eb97t {
    padding-bottom: var(--zzmy9h2);
  }
  ._12f9eb97x {
    padding-bottom: var(--zzmy9h3);
  }
  ._12f9eb981 {
    padding-bottom: var(--zzmy9h4);
  }
  ._12f9eb985 {
    padding-bottom: var(--zzmy9h5);
  }
  ._12f9eb989 {
    padding-bottom: var(--zzmy9h6);
  }
  ._12f9eb98d {
    padding-bottom: var(--zzmy9h7);
  }
  ._12f9eb98h {
    padding-bottom: var(--zzmy9h8);
  }
  ._12f9eb98l {
    padding-bottom: 0;
  }
  ._12f9eb98p {
    padding-right: var(--zzmy9h0);
  }
  ._12f9eb98t {
    padding-right: var(--zzmy9h1);
  }
  ._12f9eb98x {
    padding-right: var(--zzmy9h2);
  }
  ._12f9eb991 {
    padding-right: var(--zzmy9h3);
  }
  ._12f9eb995 {
    padding-right: var(--zzmy9h4);
  }
  ._12f9eb999 {
    padding-right: var(--zzmy9h5);
  }
  ._12f9eb99d {
    padding-right: var(--zzmy9h6);
  }
  ._12f9eb99h {
    padding-right: var(--zzmy9h7);
  }
  ._12f9eb99l {
    padding-right: var(--zzmy9h8);
  }
  ._12f9eb99p {
    padding-right: 0;
  }
  ._12f9eb99t {
    padding-left: var(--zzmy9h0);
  }
  ._12f9eb99x {
    padding-left: var(--zzmy9h1);
  }
  ._12f9eb9a1 {
    padding-left: var(--zzmy9h2);
  }
  ._12f9eb9a5 {
    padding-left: var(--zzmy9h3);
  }
  ._12f9eb9a9 {
    padding-left: var(--zzmy9h4);
  }
  ._12f9eb9ad {
    padding-left: var(--zzmy9h5);
  }
  ._12f9eb9ah {
    padding-left: var(--zzmy9h6);
  }
  ._12f9eb9al {
    padding-left: var(--zzmy9h7);
  }
  ._12f9eb9ap {
    padding-left: var(--zzmy9h8);
  }
  ._12f9eb9at {
    padding-left: 0;
  }
  ._12f9eb9ax {
    margin-top: var(--zzmy9h0);
  }
  ._12f9eb9b1 {
    margin-top: var(--zzmy9h1);
  }
  ._12f9eb9b5 {
    margin-top: var(--zzmy9h2);
  }
  ._12f9eb9b9 {
    margin-top: var(--zzmy9h3);
  }
  ._12f9eb9bd {
    margin-top: var(--zzmy9h4);
  }
  ._12f9eb9bh {
    margin-top: var(--zzmy9h5);
  }
  ._12f9eb9bl {
    margin-top: var(--zzmy9h6);
  }
  ._12f9eb9bp {
    margin-top: var(--zzmy9h7);
  }
  ._12f9eb9bt {
    margin-top: var(--zzmy9h8);
  }
  ._12f9eb9bx {
    margin-top: 0;
  }
  ._12f9eb9c1 {
    margin-bottom: var(--zzmy9h0);
  }
  ._12f9eb9c5 {
    margin-bottom: var(--zzmy9h1);
  }
  ._12f9eb9c9 {
    margin-bottom: var(--zzmy9h2);
  }
  ._12f9eb9cd {
    margin-bottom: var(--zzmy9h3);
  }
  ._12f9eb9ch {
    margin-bottom: var(--zzmy9h4);
  }
  ._12f9eb9cl {
    margin-bottom: var(--zzmy9h5);
  }
  ._12f9eb9cp {
    margin-bottom: var(--zzmy9h6);
  }
  ._12f9eb9ct {
    margin-bottom: var(--zzmy9h7);
  }
  ._12f9eb9cx {
    margin-bottom: var(--zzmy9h8);
  }
  ._12f9eb9d1 {
    margin-bottom: 0;
  }
  ._12f9eb9d5 {
    margin-right: var(--zzmy9h0);
  }
  ._12f9eb9d9 {
    margin-right: var(--zzmy9h1);
  }
  ._12f9eb9dd {
    margin-right: var(--zzmy9h2);
  }
  ._12f9eb9dh {
    margin-right: var(--zzmy9h3);
  }
  ._12f9eb9dl {
    margin-right: var(--zzmy9h4);
  }
  ._12f9eb9dp {
    margin-right: var(--zzmy9h5);
  }
  ._12f9eb9dt {
    margin-right: var(--zzmy9h6);
  }
  ._12f9eb9dx {
    margin-right: var(--zzmy9h7);
  }
  ._12f9eb9e1 {
    margin-right: var(--zzmy9h8);
  }
  ._12f9eb9e5 {
    margin-right: 0;
  }
  ._12f9eb9e9 {
    margin-left: var(--zzmy9h0);
  }
  ._12f9eb9ed {
    margin-left: var(--zzmy9h1);
  }
  ._12f9eb9eh {
    margin-left: var(--zzmy9h2);
  }
  ._12f9eb9el {
    margin-left: var(--zzmy9h3);
  }
  ._12f9eb9ep {
    margin-left: var(--zzmy9h4);
  }
  ._12f9eb9et {
    margin-left: var(--zzmy9h5);
  }
  ._12f9eb9ex {
    margin-left: var(--zzmy9h6);
  }
  ._12f9eb9f1 {
    margin-left: var(--zzmy9h7);
  }
  ._12f9eb9f5 {
    margin-left: var(--zzmy9h8);
  }
  ._12f9eb9f9 {
    margin-left: 0;
  }
  ._12f9eb9fd {
    align-items: flex-start;
  }
  ._12f9eb9fh {
    align-items: center;
  }
  ._12f9eb9fl {
    align-items: flex-end;
  }
  ._12f9eb9fp {
    justify-content: flex-start;
  }
  ._12f9eb9ft {
    justify-content: center;
  }
  ._12f9eb9fx {
    justify-content: flex-end;
  }
  ._12f9eb9g1 {
    justify-content: space-between;
  }
  ._12f9eb9g5 {
    flex-direction: row;
  }
  ._12f9eb9g9 {
    flex-direction: row-reverse;
  }
  ._12f9eb9gd {
    flex-direction: column;
  }
  ._12f9eb9gh {
    flex-direction: column-reverse;
  }
  ._12f9eb9gl {
    flex-wrap: wrap;
  }
  ._12f9eb9gp {
    flex-wrap: nowrap;
  }
  ._12f9eb9gt {
    flex-shrink: 0;
  }
  ._12f9eb9gx {
    flex-grow: 0;
  }
  ._12f9eb9h1 {
    flex-grow: 1;
  }
  ._12f9eb9h5 {
    text-align: left;
  }
  ._12f9eb9h9 {
    text-align: center;
  }
  ._12f9eb9hd {
    text-align: right;
  }
}
._16rsx744 {
  font-size: var(--_16rsx740);
  line-height: var(--_16rsx741);
}
._16rsx744:before {
  content: "";
  display: table;
  margin-bottom: var(--_16rsx742);
}
._16rsx744:after {
  content: "";
  display: table;
  margin-top: var(--_16rsx743);
}
._1mxx26x0 {
  font-family: var(--zzmy9h2w);
}
._1mxx26x1 {
  font-weight: var(--zzmy9h46);
}
._1mxx26x2 {
  font-weight: var(--zzmy9h47);
}
._1mxx26x3 {
  font-weight: var(--zzmy9h48);
}
._1mxx26x4 {
  --_16rsx740: var(--zzmy9h32);
  --_16rsx741: var(--zzmy9h33);
  --_16rsx742: var(--zzmy9h35);
  --_16rsx743: var(--zzmy9h36);
}
._1mxx26x7 {
  --_16rsx740: var(--zzmy9h3c);
  --_16rsx741: var(--zzmy9h3d);
  --_16rsx742: var(--zzmy9h3f);
  --_16rsx743: var(--zzmy9h3g);
}
._1mxx26xa {
  --_16rsx740: var(--zzmy9h3m);
  --_16rsx741: var(--zzmy9h3n);
  --_16rsx742: var(--zzmy9h3p);
  --_16rsx743: var(--zzmy9h3q);
}
._1mxx26xd {
  --_16rsx740: var(--zzmy9h3w);
  --_16rsx741: var(--zzmy9h3x);
  --_16rsx742: var(--zzmy9h3z);
  --_16rsx743: var(--zzmy9h40);
}
._1mxx26xg {
  font-size: var(--zzmy9h32);
  line-height: var(--zzmy9h33);
}
._1mxx26xh {
  font-size: var(--zzmy9h3c);
  line-height: var(--zzmy9h3d);
}
._1mxx26xi {
  font-size: var(--zzmy9h3m);
  line-height: var(--zzmy9h3n);
}
._1mxx26xj {
  font-size: var(--zzmy9h3w);
  line-height: var(--zzmy9h3x);
}
._1mxx26xk {
  font-weight: var(--zzmy9h5d);
}
._1mxx26xl {
  font-weight: var(--zzmy9h5e);
}
._1mxx26xm {
  --_16rsx740: var(--zzmy9h49);
  --_16rsx741: var(--zzmy9h4a);
  --_16rsx742: var(--zzmy9h4c);
  --_16rsx743: var(--zzmy9h4d);
}
._1mxx26xp {
  --_16rsx740: var(--zzmy9h4j);
  --_16rsx741: var(--zzmy9h4k);
  --_16rsx742: var(--zzmy9h4m);
  --_16rsx743: var(--zzmy9h4n);
}
._1mxx26xs {
  --_16rsx740: var(--zzmy9h4t);
  --_16rsx741: var(--zzmy9h4u);
  --_16rsx742: var(--zzmy9h4w);
  --_16rsx743: var(--zzmy9h4x);
}
._1mxx26xv {
  --_16rsx740: var(--zzmy9h53);
  --_16rsx741: var(--zzmy9h54);
  --_16rsx742: var(--zzmy9h56);
  --_16rsx743: var(--zzmy9h57);
}
html:not(._12f9eb9z) ._1mxx26x18 {
  --_1mxx26xy: var(--zzmy9h19);
  --_1mxx26xz: var(--zzmy9h17);
  --_1mxx26x10: var(--zzmy9h1d);
  --_1mxx26x11: var(--zzmy9h1o);
  --_1mxx26x12: var(--zzmy9h1m);
  --_1mxx26x13: var(--zzmy9h15);
  --_1mxx26x14: var(--zzmy9h1b);
  --_1mxx26x15: var(--zzmy9h1k);
  --_1mxx26x16: var(--zzmy9h1r);
  --_1mxx26x17: var(--zzmy9h1f);
}
html:not(._12f9eb9z) ._1mxx26x19 {
  --_1mxx26xy: var(--zzmy9h1a);
  --_1mxx26xz: var(--zzmy9h18);
  --_1mxx26x10: var(--zzmy9h1e);
  --_1mxx26x11: var(--zzmy9h1p);
  --_1mxx26x12: var(--zzmy9h1n);
  --_1mxx26x13: var(--zzmy9h16);
  --_1mxx26x14: var(--zzmy9h1c);
  --_1mxx26x15: var(--zzmy9h1l);
  --_1mxx26x16: var(--zzmy9h1s);
  --_1mxx26x17: var(--zzmy9h1h);
}
html._12f9eb9z ._1mxx26x1a {
  --_1mxx26xy: var(--zzmy9h19);
  --_1mxx26xz: var(--zzmy9h17);
  --_1mxx26x10: var(--zzmy9h1d);
  --_1mxx26x11: var(--zzmy9h1o);
  --_1mxx26x12: var(--zzmy9h1m);
  --_1mxx26x13: var(--zzmy9h15);
  --_1mxx26x14: var(--zzmy9h1b);
  --_1mxx26x15: var(--zzmy9h1k);
  --_1mxx26x16: var(--zzmy9h1r);
  --_1mxx26x17: var(--zzmy9h1f);
}
html._12f9eb9z ._1mxx26x1b {
  --_1mxx26xy: var(--zzmy9h1a);
  --_1mxx26xz: var(--zzmy9h18);
  --_1mxx26x10: var(--zzmy9h1e);
  --_1mxx26x11: var(--zzmy9h1p);
  --_1mxx26x12: var(--zzmy9h1n);
  --_1mxx26x13: var(--zzmy9h16);
  --_1mxx26x14: var(--zzmy9h1c);
  --_1mxx26x15: var(--zzmy9h1l);
  --_1mxx26x16: var(--zzmy9h1s);
  --_1mxx26x17: var(--zzmy9h1h);
}
html:not(._12f9eb9z) ._1mxx26x1c,
html:not(._12f9eb9z) ._1mxx26x1d,
html:not(._12f9eb9z) ._1mxx26x1e,
html:not(._12f9eb9z) ._1mxx26x1f {
  --_1mxx26x15: var(--_1mxx26xy);
}
html:not(._12f9eb9z) ._1mxx26x1g,
html:not(._12f9eb9z) ._1mxx26x1h {
  --_1mxx26x15: var(--_1mxx26xz);
}
html:not(._12f9eb9z) ._1mxx26x1i {
  --_1mxx26x15: var(--_1mxx26x12);
}
html:not(._12f9eb9z) ._1mxx26x1j {
  --_1mxx26x15: var(--_1mxx26x10);
}
html:not(._12f9eb9z) ._1mxx26x1k {
  --_1mxx26x15: var(--_1mxx26x11);
}
html._12f9eb9z ._1mxx26x1l,
html._12f9eb9z ._1mxx26x1m,
html._12f9eb9z ._1mxx26x1n,
html._12f9eb9z ._1mxx26x1o {
  --_1mxx26x15: var(--_1mxx26xy);
}
html._12f9eb9z ._1mxx26x1p,
html._12f9eb9z ._1mxx26x1q {
  --_1mxx26x15: var(--_1mxx26xz);
}
html._12f9eb9z ._1mxx26x1r {
  --_1mxx26x15: var(--_1mxx26x12);
}
html._12f9eb9z ._1mxx26x1s {
  --_1mxx26x15: var(--_1mxx26x10);
}
html._12f9eb9z ._1mxx26x1t {
  --_1mxx26x15: var(--_1mxx26x11);
}
._1mxx26x1u {
  color: var(--_1mxx26xy);
}
._1mxx26x1v {
  color: var(--_1mxx26xz);
}
._1mxx26x1w {
  color: var(--_1mxx26x10);
}
._1mxx26x1x {
  color: var(--_1mxx26x11);
}
._1mxx26x1y {
  color: var(--_1mxx26x12);
}
._1mxx26x1z {
  color: var(--_1mxx26x13);
}
._1mxx26x20 {
  color: var(--_1mxx26x14);
}
._1mxx26x21 {
  color: var(--_1mxx26x15);
}
._1mxx26x22 {
  color: var(--_1mxx26x16);
}
._1mxx26x23 {
  color: var(--_1mxx26x17);
}
._1mxx26x24 {
  padding-bottom: calc((var(--zzmy9h9) - var(--zzmy9h33)) / 2);
  padding-top: calc((var(--zzmy9h9) - var(--zzmy9h33)) / 2);
}
._1mxx26x25 {
  padding-bottom: calc((var(--zzmy9h9) - var(--zzmy9h3d)) / 2);
  padding-top: calc((var(--zzmy9h9) - var(--zzmy9h3d)) / 2);
}
._1mxx26x26 {
  padding-bottom: calc((var(--zzmy9h9) - var(--zzmy9h3n)) / 2);
  padding-top: calc((var(--zzmy9h9) - var(--zzmy9h3n)) / 2);
}
._1mxx26x27 {
  padding-bottom: calc((var(--zzmy9h9) - var(--zzmy9h3x)) / 2);
  padding-top: calc((var(--zzmy9h9) - var(--zzmy9h3x)) / 2);
}
@media screen and (min-width: 740px) {
  ._1mxx26x4 {
    --_16rsx740: var(--zzmy9h37);
    --_16rsx741: var(--zzmy9h38);
    --_16rsx742: var(--zzmy9h3a);
    --_16rsx743: var(--zzmy9h3b);
  }
  ._1mxx26x7 {
    --_16rsx740: var(--zzmy9h3h);
    --_16rsx741: var(--zzmy9h3i);
    --_16rsx742: var(--zzmy9h3k);
    --_16rsx743: var(--zzmy9h3l);
  }
  ._1mxx26xa {
    --_16rsx740: var(--zzmy9h3r);
    --_16rsx741: var(--zzmy9h3s);
    --_16rsx742: var(--zzmy9h3u);
    --_16rsx743: var(--zzmy9h3v);
  }
  ._1mxx26xd {
    --_16rsx740: var(--zzmy9h41);
    --_16rsx741: var(--zzmy9h42);
    --_16rsx742: var(--zzmy9h44);
    --_16rsx743: var(--zzmy9h45);
  }
  ._1mxx26xg {
    font-size: var(--zzmy9h37);
    line-height: var(--zzmy9h38);
  }
  ._1mxx26xh {
    font-size: var(--zzmy9h3h);
    line-height: var(--zzmy9h3i);
  }
  ._1mxx26xi {
    font-size: var(--zzmy9h3r);
    line-height: var(--zzmy9h3s);
  }
  ._1mxx26xj {
    font-size: var(--zzmy9h41);
    line-height: var(--zzmy9h42);
  }
  ._1mxx26xm {
    --_16rsx740: var(--zzmy9h4e);
    --_16rsx741: var(--zzmy9h4f);
    --_16rsx742: var(--zzmy9h4h);
    --_16rsx743: var(--zzmy9h4i);
  }
  ._1mxx26xp {
    --_16rsx740: var(--zzmy9h4o);
    --_16rsx741: var(--zzmy9h4p);
    --_16rsx742: var(--zzmy9h4r);
    --_16rsx743: var(--zzmy9h4s);
  }
  ._1mxx26xs {
    --_16rsx740: var(--zzmy9h4y);
    --_16rsx741: var(--zzmy9h4z);
    --_16rsx742: var(--zzmy9h51);
    --_16rsx743: var(--zzmy9h52);
  }
  ._1mxx26xv {
    --_16rsx740: var(--zzmy9h58);
    --_16rsx741: var(--zzmy9h59);
    --_16rsx742: var(--zzmy9h5b);
    --_16rsx743: var(--zzmy9h5c);
  }
  ._1mxx26x24 {
    padding-bottom: calc((var(--zzmy9h9) - var(--zzmy9h38)) / 2);
    padding-top: calc((var(--zzmy9h9) - var(--zzmy9h38)) / 2);
  }
  ._1mxx26x25 {
    padding-bottom: calc((var(--zzmy9h9) - var(--zzmy9h3i)) / 2);
    padding-top: calc((var(--zzmy9h9) - var(--zzmy9h3i)) / 2);
  }
  ._1mxx26x26 {
    padding-bottom: calc((var(--zzmy9h9) - var(--zzmy9h3s)) / 2);
    padding-top: calc((var(--zzmy9h9) - var(--zzmy9h3s)) / 2);
  }
  ._1mxx26x27 {
    padding-bottom: calc((var(--zzmy9h9) - var(--zzmy9h42)) / 2);
    padding-top: calc((var(--zzmy9h9) - var(--zzmy9h42)) / 2);
  }
}
._79z0d70 {
  --zzmy9h0: 24px;
  --zzmy9h1: 4px;
  --zzmy9h2: 8px;
  --zzmy9h3: 12px;
  --zzmy9h4: 20px;
  --zzmy9h5: 32px;
  --zzmy9h6: 48px;
  --zzmy9h7: 96px;
  --zzmy9h8: 120px;
  --zzmy9h9: 44px;
  --zzmy9ha: 4px;
  --zzmy9hb: 2px;
  --zzmy9hc: 4px;
  --zzmy9hd: 6px;
  --zzmy9he: 10px;
  --zzmy9hf: #e60278;
  --zzmy9hg: #f8b1dc;
  --zzmy9hh: #fdc221;
  --zzmy9hi: #fee384;
  --zzmy9hj: #b91e1e;
  --zzmy9hk: #fb999a;
  --zzmy9hl: #838fa5;
  --zzmy9hm: rgba(159, 176, 245, 0.7);
  --zzmy9hn: #4964e9;
  --zzmy9ho: #9fb0f5;
  --zzmy9hp: #1d559d;
  --zzmy9hq: #98c9f1;
  --zzmy9hr: #2e3849;
  --zzmy9ht: #d2d7df;
  --zzmy9hs: #fff;
  --zzmy9hu: #12784f;
  --zzmy9hv: #8bdec5;
  --zzmy9hw: #512eaa;
  --zzmy9hx: #c6acf5;
  --zzmy9hy: 1px;
  --zzmy9hz: 2px;
  --zzmy9h10: 3px;
  --zzmy9h11: 400px;
  --zzmy9h12: 660px;
  --zzmy9h13: 940px;
  --zzmy9h14: 1280px;
  --zzmy9h15: #e60278;
  --zzmy9h16: #f8b1dc;
  --zzmy9h17: #723d02;
  --zzmy9h18: #fee384;
  --zzmy9h19: #b91e1e;
  --zzmy9h1a: #fb999a;
  --zzmy9h1b: #4964e9;
  --zzmy9h1c: #9fb0f5;
  --zzmy9h1d: #1d559d;
  --zzmy9h1e: #98c9f1;
  --zzmy9h1f: #4964e9;
  --zzmy9h1h: #9fb0f5;
  --zzmy9h1g: #4964e9;
  --zzmy9h1i: #512eaa;
  --zzmy9h1j: #c6acf5;
  --zzmy9h1k: #2e3849;
  --zzmy9h1l: #fff;
  --zzmy9h1m: #12784f;
  --zzmy9h1n: #8bdec5;
  --zzmy9h1o: #512eaa;
  --zzmy9h1p: #c6acf5;
  --zzmy9h1q: #f57c00;
  --zzmy9h1r: #5a6881;
  --zzmy9h1s: hsla(0, 0%, 100%, 0.65);
  --zzmy9h1t: #f7f8fb;
  --zzmy9h1u: #0e131b;
  --zzmy9h1v: #0d3880;
  --zzmy9h1w: #e60278;
  --zzmy9h1x: #cd026b;
  --zzmy9h1y: #fd0585;
  --zzmy9h1z: #feeffa;
  --zzmy9h20: #fdd7f3;
  --zzmy9h21: #fde3f6;
  --zzmy9h22: #fdc221;
  --zzmy9h23: #fef8de;
  --zzmy9h24: #b91e1e;
  --zzmy9h25: #a31a1a;
  --zzmy9h26: #db1616;
  --zzmy9h27: #ffe3e2;
  --zzmy9h28: #fef3f3;
  --zzmy9h29: #fcdbdb;
  --zzmy9h2a: #fde7e7;
  --zzmy9h2b: #4964e9;
  --zzmy9h2c: #3251e6;
  --zzmy9h2d: #5975ff;
  --zzmy9h2e: #f4f6fe;
  --zzmy9h2f: #dde3fc;
  --zzmy9h2g: #e8ecfd;
  --zzmy9h2h: #1d559d;
  --zzmy9h2i: #e3f2fb;
  --zzmy9h2j: #2e3849;
  --zzmy9h2k: #242c39;
  --zzmy9h2l: #384459;
  --zzmy9h2m: #eaecf1;
  --zzmy9h2n: #f7f8fb;
  --zzmy9h2o: #e6e9f3;
  --zzmy9h2p: #eff1f7;
  --zzmy9h2q: #12784f;
  --zzmy9h2r: #e2f7f1;
  --zzmy9h2s: #512eaa;
  --zzmy9h2t: #f1e8fd;
  --zzmy9h2u: #fff;
  --zzmy9h2v: #1c2330;
  --zzmy9h2w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --zzmy9h2x: 1456;
  --zzmy9h2y: 1900;
  --zzmy9h2z: -500;
  --zzmy9h30: 0;
  --zzmy9h31: 2048;
  --zzmy9h32: 12px;
  --zzmy9h33: 20px;
  --zzmy9h34: 8.5313px;
  --zzmy9h35: -0.4642em;
  --zzmy9h36: -0.4915em;
  --zzmy9h37: 12px;
  --zzmy9h38: 20px;
  --zzmy9h39: 8.5313px;
  --zzmy9h3a: -0.4642em;
  --zzmy9h3b: -0.4915em;
  --zzmy9h3c: 14px;
  --zzmy9h3d: 20px;
  --zzmy9h3e: 9.9531px;
  --zzmy9h3f: -0.3451em;
  --zzmy9h3g: -0.3725em;
  --zzmy9h3h: 14px;
  --zzmy9h3i: 20px;
  --zzmy9h3j: 9.9531px;
  --zzmy9h3k: -0.3451em;
  --zzmy9h3l: -0.3725em;
  --zzmy9h3m: 16px;
  --zzmy9h3n: 24px;
  --zzmy9h3o: 11.375px;
  --zzmy9h3p: -0.3809em;
  --zzmy9h3q: -0.4082em;
  --zzmy9h3r: 16px;
  --zzmy9h3s: 24px;
  --zzmy9h3t: 11.375px;
  --zzmy9h3u: -0.3809em;
  --zzmy9h3v: -0.4082em;
  --zzmy9h3w: 18px;
  --zzmy9h3x: 28px;
  --zzmy9h3y: 12.7969px;
  --zzmy9h3z: -0.4086em;
  --zzmy9h40: -0.436em;
  --zzmy9h41: 18px;
  --zzmy9h42: 28px;
  --zzmy9h43: 12.7969px;
  --zzmy9h44: -0.4086em;
  --zzmy9h45: -0.436em;
  --zzmy9h46: 400;
  --zzmy9h47: 600;
  --zzmy9h48: 700;
  --zzmy9h49: 28px;
  --zzmy9h4a: 36px;
  --zzmy9h4b: 19.9063px;
  --zzmy9h4c: -0.2737em;
  --zzmy9h4d: -0.3011em;
  --zzmy9h4e: 42px;
  --zzmy9h4f: 44px;
  --zzmy9h4g: 29.8594px;
  --zzmy9h4h: -0.1547em;
  --zzmy9h4i: -0.182em;
  --zzmy9h4j: 21px;
  --zzmy9h4k: 32px;
  --zzmy9h4l: 14.9297px;
  --zzmy9h4m: -0.3928em;
  --zzmy9h4n: -0.4201em;
  --zzmy9h4o: 28px;
  --zzmy9h4p: 36px;
  --zzmy9h4q: 19.9063px;
  --zzmy9h4r: -0.2737em;
  --zzmy9h4s: -0.3011em;
  --zzmy9h4t: 21px;
  --zzmy9h4u: 28px;
  --zzmy9h4v: 14.9297px;
  --zzmy9h4w: -0.2975em;
  --zzmy9h4x: -0.3249em;
  --zzmy9h4y: 21px;
  --zzmy9h4z: 28px;
  --zzmy9h50: 14.9297px;
  --zzmy9h51: -0.2975em;
  --zzmy9h52: -0.3249em;
  --zzmy9h53: 18px;
  --zzmy9h54: 28px;
  --zzmy9h55: 12.7969px;
  --zzmy9h56: -0.4086em;
  --zzmy9h57: -0.436em;
  --zzmy9h58: 18px;
  --zzmy9h59: 28px;
  --zzmy9h5a: 12.7969px;
  --zzmy9h5b: -0.4086em;
  --zzmy9h5c: -0.436em;
  --zzmy9h5d: 400;
  --zzmy9h5e: 600;
  --zzmy9h5f: none;
  --zzmy9h5g: 24px;
  --zzmy9h5h: 20px;
  --zzmy9h5i: transform 0.125s ease, opacity 0.125s ease;
  --zzmy9h5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --zzmy9h5k: scale(0.95);
  --zzmy9h5l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --zzmy9h5m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --zzmy9h5n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._8xt1sz6 {
  background: var(--_8xt1sz0);
}
._8xt1sz7 {
  background: var(--_8xt1sz1);
}
._8xt1sz8 {
  background: var(--_8xt1sz2);
}
._8xt1sz9 {
  background: var(--_8xt1sz3);
}
._8xt1sza {
  background: var(--_8xt1sz4);
}
._8xt1szb {
  background: var(--_8xt1sz5);
}
html:not(._12f9eb9z) ._8xt1szc {
  --_8xt1sz0: var(--zzmy9hw);
  --_8xt1sz1: var(--zzmy9hp);
  --_8xt1sz2: var(--zzmy9hu);
  --_8xt1sz3: var(--zzmy9hh);
  --_8xt1sz4: var(--zzmy9hj);
  --_8xt1sz5: var(--zzmy9hn);
}
html:not(._12f9eb9z) ._8xt1szd {
  --_8xt1sz0: var(--zzmy9hx);
  --_8xt1sz1: var(--zzmy9hq);
  --_8xt1sz2: var(--zzmy9hv);
  --_8xt1sz3: var(--zzmy9hi);
  --_8xt1sz4: var(--zzmy9hk);
  --_8xt1sz5: var(--zzmy9ho);
}
html._12f9eb9z ._8xt1sze {
  --_8xt1sz0: var(--zzmy9hw);
  --_8xt1sz1: var(--zzmy9hp);
  --_8xt1sz2: var(--zzmy9hu);
  --_8xt1sz3: var(--zzmy9hh);
  --_8xt1sz4: var(--zzmy9hj);
  --_8xt1sz5: var(--zzmy9hn);
}
html._12f9eb9z ._8xt1szf {
  --_8xt1sz0: var(--zzmy9hx);
  --_8xt1sz1: var(--zzmy9hq);
  --_8xt1sz2: var(--zzmy9hv);
  --_8xt1sz3: var(--zzmy9hi);
  --_8xt1sz4: var(--zzmy9hk);
  --_8xt1sz5: var(--zzmy9ho);
}
._8xt1szg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._8xt1szh {
  width: var(--zzmy9he);
}
._8xt1szi {
  width: var(--zzmy9ha);
}
._1rkli420 {
  margin-bottom: -0.1em;
}
._1rkli422 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
._1rkli420 ._1rkli422 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._1rkli424 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--_1rkli423);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__12f9eb9z,html.sprinkles_darkMode__12f9eb9z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__79z0d70 typography_lightModeTone_light__1mxx26x18 typography_darkModeTone_dark__1mxx26x1b">
+        <div class="reset_base__1wjr3c00 sprinkles_paddingBottom_gutter_mobile__12f9eb97i sprinkles_paddingTop_gutter_mobile__12f9eb96e sprinkles_paddingLeft_gutter_mobile__12f9eb99q sprinkles_paddingRight_gutter_mobile__12f9eb98m sprinkles_position_relative_mobile__12f9eb95e typography_lightModeTone_light__1mxx26x18 typography_darkModeTone_dark__1mxx26x1b sprinkles_background_surface_lightMode__12f9eb932 sprinkles_background_surfaceDark_darkMode__12f9eb935">
+          <span class="reset_base__1wjr3c00 sprinkles_display_block_mobile__12f9eb94y typography_fontFamily__1mxx26x0 typography_fontWeight_regular__1mxx26x1 typography_tone_neutral__1mxx26x21 capsize_capsizeStyle__16rsx744 typography_textSize_large__1mxx26xd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
